--- a/components/main.admin-3/do_admin_sidebar.css
+++ b/components/main.admin-3/do_admin_sidebar.css
@@ -7,7 +7,7 @@
 	height: 100vh;	
 	display: inline-block;
 	padding-top: 30px;
-	position: fixed; right: 0px; top: 0px; z-index: 111;
+	position: fixed; right: 0px; top: 0px; z-index: 99;
 	vertical-align: middle;
 	overflow-y: scroll;
 	overflow-x: hidden;
